# pytableformat

./: LICENSE  README.md  pyproject.toml  pytableformat.py
pytableformat/: __init__.py  pytableformat.py
tests/: test_column.py  test_table.py
